# raylib-osu

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md  auto_osu.py
src/: main.cpp  raygui.hpp  send_key.cpp  wav_to_beats.cpp
